<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Treinador</string>
    <string name="action_settings">Settings</string>
    <string name="register_athlete">Cadastrar Atleta</string>
    <string name="register_muscle">Cadastra Musculo</string>
    <string name="athletes">Atletas</string>
    <string name="calendar_activities">Calendário de Atividades</string>
    <string name="muscles">Músculos</string>
    <string name="exercise_type">Tipo de Exercício</string>
    <string name="agenda_list">Agenda</string>
    <string name="exercise_detail">Exercício</string>
    <string name="mark">Marco</string>
    <string name="size">Medidas</string>
    <string name="spn_muscle_tittle">Músculo</string>
    <string name="spn_exercise_type_tittle">Exercício</string>

    <string-array name="gender">
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>
    <string-array name="options_list">
        <item>Abrir</item>
        <item>Atualizar</item>
        <item>Excluir</item>
    </string-array>
    <string-array name="options_list_2">
        <item>Atualizar</item>
        <item>Excluir</item>
    </string-array>

    <string name="title_activity_introducao">Introducao</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tipo_exercicio">TipoExercicio</string>
    <string name="register">Cadastrar</string>
    <string name="instructions">Instruções</string>
    <string name="weight">Peso</string>
    <string name="repetitions">Repetições</string>
    <string name="description">Descrição</string>
    <string name="btn_register">Cadastrar</string>
    <string name="value">Valor</string>
    <string name="date">Data</string>
    <string name="initial_date">Data Inicial</string>
    <string name="final_date">Data Final</string>
    <string name="duration">Duração</string>
    <string name="register_size">Cadastra Medida</string>
    <string name="athlete_name">Nome</string>
    <string name="athlete_birthdate">Data de Nascimento</string>
    <string name="athlete_gender">Sexo</string>
    <string name="confirm">Confirmar</string>
    <string name="menu">Menu</string>
    <string name="new_">Novo</string>
    <string name="edit">Editar</string>
    <string name="remove">Remover</string>
    <string name="title_activity_muscle_list">MuscleList</string>
    <string name="title_activity_exercise_type_list">ExerciseTypeList</string>
    <string name="title_activity_agenda_list">AgendaList</string>
    <string name="title_activity_exercise_detail">ExerciseDetail</string>

</resources>
