<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:padding="10dp"
    tools:context=".RegisterAthlete" >

    <TableRow
        android:id="@+id/tableRow_row1Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" >
        
         <TextView
        android:id="@+id/lbl_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/athlete_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" 
        android:layout_weight="1"
        android:gravity="center"/>        
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow_row2Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="5dp">
         
        <EditText
        android:id="@+id/txt_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rect"
        android:ems="10"
        android:inputType="textPersonName"
         android:layout_weight="1"
        android:gravity="center"
         />        
        
    </TableRow>
    
    
    <TableRow
        android:id="@+id/tableRow_row1BirthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="10dp">
        
         <TextView
        android:id="@+id/lbl_birthDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/athlete_birthdate"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" 
        android:layout_weight="1"
        android:gravity="center"/>  
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow_row2BirthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="5dp">
         
         <EditText
        android:id="@+id/txt_birthDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rect"
        android:ems="10"
        android:inputType="date"
        android:layout_weight="1"
        android:gravity="center"
         />        
         
    </TableRow>
    
    
    <TableRow
        android:id="@+id/tableRow_row1Gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" >
         
        <TextView
        android:id="@+id/lbl_gender"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/athlete_gender"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" 
        android:layout_weight="1"
        android:gravity="center"/>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow_row2Gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="5dp">
        
        
    <Spinner
        android:id="@+id/spn_gender"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rect"
        android:entries="@array/gender"
        android:prompt="@array/gender" 
        android:layout_weight="1"
        android:gravity="center"/>
    </TableRow>
    
        <TableRow
        android:id="@+id/tableRow_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginTop="10dp">
    
        <Button
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/my_button"
        android:text="@string/confirm"
        android:textColor="@color/white" 
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="20sp"/>
    </TableRow>

</TableLayout>