<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:padding="10dp" 
        android:layout_marginBottom="10dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
             >

            <TableRow
                android:id="@+id/tableRow_row1Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="visible"
                android:layout_marginBottom="10dp" >
                 
                 <Spinner
                    android:id="@+id/spn_muscle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_rect"
                    android:gravity="center"
                    android:prompt="@string/spn_muscle_tittle" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow_row10Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp" >

                <TextView
                    android:id="@+id/lbl_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/value"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow_row2Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp" >

                <EditText
                    android:id="@+id/txt_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/rounded_rect" >
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow_row1Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                 android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/lbl_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/date"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow_row2Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp" >

                <EditText
                    android:id="@+id/txt_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="date" 
                    android:background="@drawable/rounded_rect">
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 >

                <Button
                    android:id="@+id/btn_register_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/btn_register"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/selector_button" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>