<?xml version="1.0" encoding="utf-8"?>
    
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
    >
        
         <TableLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:padding="10dp" >
    
		    <TableRow 
		       android:id="@+id/tableRow_row1Description_MarkRegister"
		       android:layout_width="match_parent"
		       android:layout_height="wrap_content" 
		       android:layout_marginBottom="10dp" >
		       
		       <TextView 
		           android:id="@+id/lbl_description_MarkRegister"
		           android:layout_width="match_parent"
		           android:layout_height="wrap_content"
		           android:layout_weight="1"
		           android:gravity="center"
		           android:textSize="20sp"
		           android:textColor="#000000"
		           android:text="@string/description"/>
		    </TableRow>
		    <TableRow 
		       android:id="@+id/tableRow_row2Description_MarkRegister"
		       android:layout_width="match_parent"
		       android:layout_height="wrap_content" 
		       android:layout_marginBottom="5dp">
		
		        <EditText
		           android:id="@+id/txt_row2Description_MarkRegister"
		           android:layout_width="match_parent"
		           android:layout_height="wrap_content"
		           android:layout_weight="1"
		           android:gravity="center"
		           android:textSize="20sp"
		           android:background="@drawable/selector_edit_text">
		        </EditText>
		    </TableRow>
		
		    <TableRow
		       android:id="@+id/tableRow_row1Date_MarkRegister"
		       android:layout_width="match_parent"
		       android:layout_height="wrap_content"
		       android:layout_marginBottom="10dp" >
			
		        <TextView 
		           android:id="@+id/lbl_row1Date_MarkRegister"
		           android:layout_width="match_parent"
		           android:layout_height="wrap_content"
		           android:layout_weight="1"
		           android:gravity="center"
		           android:textSize="20sp"
		           android:textColor="#000000"
		           android:text="@string/initial_date"/>
		    </TableRow>
		    <TableRow 
		       android:id="@+id/tableRow_row2Date_MarkRegister"
		       android:layout_width="match_parent"
		       android:layout_height="wrap_content"
		       android:layout_marginBottom="20dp">
		        
		        <EditText
		           android:id="@+id/txt_row2Date_MarkRegister"
		           android:inputType="date"
		           android:layout_width="match_parent"
		           android:layout_height="wrap_content"
		           android:layout_weight="1"
		           android:gravity="center"
		           android:textSize="20sp"
		           android:background="@drawable/selector_edit_text"/>
		    </TableRow>
		    
		    <TableRow
		       android:id="@+id/tableRow_row1FinalDate_MarkRegister"
		       android:layout_width="match_parent"
		       android:layout_height="wrap_content"
		       android:layout_marginBottom="10dp" >
			
		        <TextView 
		           android:id="@+id/lbl_row1FinalDate_MarkRegister"
		           android:layout_width="match_parent"
		           android:layout_height="wrap_content"
		           android:layout_weight="1"
		           android:gravity="center"
		           android:textSize="20sp"
		           android:textColor="#000000"
		           android:text="@string/final_date"/>
		    </TableRow>
		    <TableRow 
		       android:id="@+id/tableRow_row2FinalDate_MarkRegister"
		       android:layout_width="match_parent"
		       android:layout_height="wrap_content"
		       android:layout_marginBottom="20dp">
		        
		        <EditText
		           android:id="@+id/txt_row2FinalDate_MarkRegister"
		           android:inputType="date"
		           android:layout_width="match_parent"
		           android:layout_height="wrap_content"
		           android:layout_weight="1"
		           android:gravity="center"
		           android:textSize="20sp"
		           android:background="@drawable/selector_edit_text"/>
		    </TableRow>
		    
		     
	   		<TableRow 
		       android:id="@+id/tableRow_buttonRegister_MarkRegister"
		       android:layout_width="match_parent"
		       android:layout_height="wrap_content">
		        
		        <Button
		           android:id="@+id/btn_buttonRegister_MarkRegister"
		           android:layout_width="match_parent"
		           android:layout_height="wrap_content"
		           android:layout_weight="1"
		           android:gravity="center"
		           android:text="@string/confirm"
		           android:textSize="20sp"
		           android:textColor="@color/white"
		           android:background="@drawable/selector_button"/>
			</TableRow>
		    
		</TableLayout>     
	</ScrollView>
