<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tableLayout_btn"
        android:layout_marginBottom="10dp"
        android:fillViewport="true"
        android:padding="10dp" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <TableRow
                android:id="@+id/tableRow_row1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="visible"
                android:layout_marginBottom="10dp" >
                 
                 <Spinner
                    android:id="@+id/spn_exercise_type"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_rect"
                    android:gravity="center"
                    android:prompt="@string/spn_exercise_type_tittle" />

            </TableRow>


            <TableRow
                android:id="@+id/tableRow_row1Instructions__ExerciseRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" >

                <TextView
                    android:id="@+id/lbl_row1Instructions__ExerciseRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/instructions"
                    android:textSize="20sp" 
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow_row2Instructions__ExerciseRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" >

                <EditText
                    android:id="@+id/txt_row2Instructions__ExerciseRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/selector_edit_text"
                    android:gravity="center" 
                    android:textSize="20sp"
                    android:textStyle="italic"/>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow_row1Date__ExerciseRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" >

                <TextView
                    android:id="@+id/lbl_row1Date__ExerciseRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/date"
                    android:textSize="20sp"
                    android:textColor="#000000"  />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow_row2Date__ExerciseRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" >

                <EditText
                    android:id="@+id/txt_row2Date__ExerciseRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="date"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:focusable="false"
                    android:longClickable="false"
                    android:cursorVisible="false"/>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow_row1Weight__ExerciseRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" >

                <TextView
                    android:id="@+id/lbl_row1Weight__ExerciseRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/weight"
                    android:textSize="20sp" 
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow_row2Weight__ExerciseRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" >

                <EditText
                    android:id="@+id/txt_row2Weight__ExerciseRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/selector_edit_text"
                    android:gravity="center"
                    android:inputType="number" 
                    android:textSize="20sp"
                    android:textStyle="italic"/>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow_row1Repetitions__ExerciseRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" >

                <TextView
                    android:id="@+id/lbl_row1Repetitions__ExerciseRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/repetitions"
                    android:textSize="20sp" 
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow_row2Repetitions__ExerciseRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" >

                <EditText
                    android:id="@+id/txt_row2Repetitions__ExerciseRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/selector_edit_text"
                    android:gravity="center"
                    android:inputType="number"
                    android:textSize="20sp" 
                    android:textStyle="italic"/>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow_row1Duration__ExerciseRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" >

                <TextView
                    android:id="@+id/lbl_row1Duration__ExerciseRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/duration"
                    android:textSize="20sp"
                    android:textColor="#000000"  />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow_row2Duration__ExerciseRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" >

                <EditText
                    android:id="@+id/txt_row2Duration__ExerciseRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/selector_edit_text"
                    android:gravity="center"
                    android:inputType="time" 
                    android:textSize="20sp"
                    android:textStyle="italic"/>
            </TableRow>
        </TableLayout>
    </ScrollView>

    <TableLayout
        android:id="@+id/tableLayout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="2dp" >

        <TableRow
            android:id="@+id/tableRow_buttonRegister__ExerciseRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_Register__ExerciseRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:gravity="center"
                android:text="@string/confirm"
                android:textSize="20sp" 
                android:layout_margin="10dp"
                android:textColor="@color/white"
                />
        </TableRow>
    </TableLayout>

</RelativeLayout>
